--- a/package.yaml
+++ b/package.yaml
@@ -1,10 +1,15 @@
 name: aoc
 
 data-files:
-    - data/*.*
+    - data/*/*.*
 
 dependencies:
+  - attoparsec
   - base == 4.*
+  - bytestring
+  - containers
+  - split
+  - text
 
 library:
   source-dirs: src
