--- a/package.yaml
+++ b/package.yaml
@@ -26,3 +26,20 @@ executables:
     - -with-rtsopts=-N
     dependencies:
     - aoc
+
+tests:
+  aoc-test:
+    main:                Spec.hs
+    source-dirs:         test
+    ghc-options:
+    - -threaded
+    - -rtsopts
+    - -with-rtsopts=-N
+    dependencies:
+    - aoc
+    - base == 4.*
+    - hspec
+    - QuickCheck
+    verbatim: |
+      build-tool-depends:
+          hspec-discover:hspec-discover
