--- a/treefmt.toml
+++ b/treefmt.toml
@@ -2,6 +2,8 @@
 command = "fourmolu"
 options = [
     "--ghc-opt",
+    "-XImportQualifiedPost",
+    "--ghc-opt",
     "-XTypeApplications",
     "--mode",
     "inplace",
