--- a/aoc.cabal
+++ b/aoc.cabal
@@ -1,12 +1,11 @@
-cabal-version: 2.4
-
--- This file has been generated from package.yaml by hpack version 0.34.7.
---
--- see: https://github.com/sol/hpack
-
-name:          aoc
-version:       0.0.0.1
-build-type:    Simple
+cabal-version:      2.4
+name:               aoc
+version:            0.0.0.1
+license:            MIT
+copyright:          2022 Yuan Wang
+maintainer:         me@yuanwang.ca
+author:             Yuan Wang
+build-type:         Simple
 data-files:
   data/2021/day1.txt
   data/2021/day10-test.txt
@@ -25,8 +24,77 @@ data-files:
   data/2021/day9-test.txt
   data/2021/day9.txt
 
-library
-  exposed-modules:
+-- extra-source-files:
+--   LICENSE
+--   README.md
+
+common shared
+  ghc-options:
+    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
+    -Wmissing-deriving-strategies -Wunused-foralls -Wunused-foralls
+    -fprint-explicit-foralls -fprint-explicit-kinds
+    -Wno-unticked-promoted-constructors
+
+  -- mixins:
+  --   base hiding (Prelude),
+  --   relude (Relude as Prelude, Relude.Container.One),
+  --   relude
+
+  default-extensions:
+    NoStarIsType
+    BangPatterns
+    ConstraintKinds
+    DataKinds
+    DeriveDataTypeable
+    DeriveFoldable
+    DeriveFunctor
+    DeriveGeneric
+    DeriveLift
+    DeriveTraversable
+    DerivingStrategies
+    DerivingVia
+    EmptyCase
+    EmptyDataDecls
+    EmptyDataDeriving
+    ExistentialQuantification
+    ExplicitForAll
+    FlexibleContexts
+    FlexibleInstances
+    GADTSyntax
+    GeneralisedNewtypeDeriving
+    ImportQualifiedPost
+    KindSignatures
+    LambdaCase
+    MultiParamTypeClasses
+    MultiWayIf
+    NumericUnderscores
+    OverloadedStrings
+    PolyKinds
+    PostfixOperators
+    RankNTypes
+    ScopedTypeVariables
+    StandaloneDeriving
+    StandaloneKindSignatures
+    TupleSections
+    TypeApplications
+    TypeFamilies
+    TypeOperators
+    ViewPatterns
+
+  build-depends:
+    , array
+    , attoparsec
+    , base        >=4 && <5
+    , bytestring
+    , containers
+    , mtl
+    , split
+    , text
+    , vector
+
+  hs-source-dirs:     src
+  default-language:   Haskell2010
+  other-modules:
     Y2020.Day1
     Y2020.Day2
     Y2020.Day3
@@ -46,62 +114,43 @@ library
     Y2021.Day8
     Y2021.Day9
 
-  other-modules:    Paths_aoc
-  hs-source-dirs:   src
-  build-depends:
-    , array
-    , attoparsec
-    , base        >=4 && <5
-    , bytestring
-    , containers
-    , mtl
-    , split
-    , text
-    , vector
+common test-deps
+  build-depends: hspec
 
-  default-language: Haskell2010
+library
+  import:          shared
+
+  hs-source-dirs:  src
 
 executable aoc-executable
-  main-is:          Main.hs
-  other-modules:    Paths_aoc
-  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
-  build-depends:
-    , aoc
-    , array
-    , attoparsec
-    , base        >=4 && <5
-    , bytestring
-    , containers
-    , mtl
-    , split
-    , text
-    , vector
-
-  default-language: Haskell2010
+  main-is: Main.hs
+  import:  shared
 
 test-suite aoc-test
-  type:               exitcode-stdio-1.0
-  main-is:            Spec.hs
+  type:           exitcode-stdio-1.0
+  import:         shared, test-deps
+  main-is:        Spec.hs
   other-modules:
     Paths_aoc
     Y2021.Day11Spec
     Y2021.Day8Spec
 
-  hs-source-dirs:     test
-  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
-  build-depends:
-    , aoc
-    , array
-    , attoparsec
-    , base        >=4 && <5
-    , bytestring
-    , containers
-    , hspec
-    , mtl
-    , QuickCheck
-    , split
-    , text
-    , vector
+  hs-source-dirs: test
 
-  default-language:   Haskell2010
-  build-tool-depends: hspec-discover:hspec-discover
+-- ghc-options:        -threaded -rtsopts -with-rtsopts=-N
+-- build-depends:
+--   , aoc
+--   , array
+--   , attoparsec
+--   , base        >=4 && <5
+--   , bytestring
+--   , containers
+--   , hspec
+--   , mtl
+--   , QuickCheck
+--   , split
+--   , text
+--   , vector
+
+-- default-language:   Haskell2010
+-- build-tool-depends: hspec-discover:hspec-discover
