--- a/aoc.cabal
+++ b/aoc.cabal
@@ -1,11 +1,11 @@
-cabal-version:      2.4
-name:               aoc
-version:            0.0.0.1
-license:            MIT
-copyright:          2022 Yuan Wang
-maintainer:         me@yuanwang.ca
-author:             Yuan Wang
-build-type:         Simple
+cabal-version: 2.4
+name:          aoc
+version:       0.0.0.1
+license:       MIT
+copyright:     2022 Yuan Wang
+maintainer:    me@yuanwang.ca
+author:        Yuan Wang
+build-type:    Simple
 data-files:
   data/2021/day1.txt
   data/2021/day10-test.txt
@@ -94,48 +94,40 @@ common shared
 
   hs-source-dirs:     src
   default-language:   Haskell2010
-  other-modules:
-    Y2020.Day1
-    Y2020.Day2
-    Y2020.Day3
-    Y2020.Day4
-    Y2020.Day5
-    Y2020.Day6
-    Y2021.Day1
-    Y2021.Day10
-    Y2021.Day11
-    Y2021.Day12
-    Y2021.Day2
-    Y2021.Day3
-    Y2021.Day4
-    Y2021.Day5
-    Y2021.Day6
-    Y2021.Day7
-    Y2021.Day8
-    Y2021.Day9
+  other-modules:      Y2021.Day1
+
+-- Y2021.Day10
+-- Y2021.Day11
+-- Y2021.Day12
+-- Y2021.Day2
+-- Y2021.Day3
+-- Y2021.Day4
+-- Y2021.Day5
+-- Y2021.Day6
+-- Y2021.Day7
+-- Y2021.Day8
+-- Y2021.Day9
 
 common test-deps
   build-depends: hspec
 
 library
-  import:          shared
-
-  hs-source-dirs:  src
+  import:         shared
+  hs-source-dirs: src
 
 executable aoc-executable
-  main-is: Main.hs
   import:  shared
+  main-is: Main.hs
 
-test-suite aoc-test
-  type:           exitcode-stdio-1.0
-  import:         shared, test-deps
-  main-is:        Spec.hs
-  other-modules:
-    Paths_aoc
-    Y2021.Day11Spec
-    Y2021.Day8Spec
+-- test-suite aoc-test
+--   type:           exitcode-stdio-1.0
+--   import:         shared, test-deps
+--   main-is:        Spec.hs
+--   other-modules:
+--     Y2021.Day11Spec
+--     Y2021.Day8Spec
 
-  hs-source-dirs: test
+--   hs-source-dirs: test
 
 -- ghc-options:        -threaded -rtsopts -with-rtsopts=-N
 -- build-depends:
