--- a/aoc.cabal
+++ b/aoc.cabal
@@ -7,23 +7,8 @@ maintainer:    me@yuanwang.ca
 author:        Yuan Wang
 build-type:    Simple
 data-files:
-  data/2021/day1.txt
-  data/2021/day10-test.txt
-  data/2021/day10.txt
-  data/2021/day11-test.txt
-  data/2021/day11.txt
-  data/2021/day12.txt
-  data/2021/day2.txt
-  data/2021/day3.txt
-  data/2021/day4-test.txt
-  data/2021/day4.txt
-  data/2021/day5.txt
-  data/2021/day6.txt
-  data/2021/day7.txt
-  data/2021/day8.txt
-  data/2021/day9-test.txt
-  data/2021/day9.txt
-  data/2022/day1.txt
+  data/2021/*
+  data/2022/*
 
 -- extra-source-files:
 --   LICENSE
