--- a/aoc.cabal
+++ b/aoc.cabal
@@ -7,8 +7,8 @@ maintainer:    me@yuanwang.ca
 author:        Yuan Wang
 build-type:    Simple
 data-files:
-  data/2021/*
-  data/2022/*
+  data/2021/*.txt
+  data/2022/*.txt
 
 -- extra-source-files:
 --   LICENSE
